# CameraToolKit

./: .gitignore  CMakeLists.txt  README.md  generate_factory_calib.py  generate_test_images.py
config/: pipeline_session.toml
docs/: pipeline_dependency_analysis.md
include/algo/: ccm.h  clut.h  color_error.h  dead_pixel.h  flat_field.h  gamma.h  image_node.h  quick_color_calib.h  roi.h  scm.h  spectral.h  white_balance.h
include/ui/: color_char_calib_panel.h  color_error_panel.h  dead_pixel_panel.h  flat_field_panel.h  image_viewer.h  main_window.h  quick_color_calib_panel.h  roi_editor.h  spectral_calib_panel.h
include/utils/: image_io.h  logger.h  memory_pool.h  session_config.h  tone_mapping.h
include/wxui/: color_char_calib_panel.h  color_error_panel.h  dead_pixel_panel.h  flat_field_panel.h  image_canvas.h  main_app.h  main_frame.h  pipeline_panel.h  quick_color_calib_panel.h  scm_panel.h  spectral_calib_panel.h  worker_thread.h
scripts/: generate_scm_test_images.py  verify_scm_fix.py
src/: main.cpp
src/algo/: ccm.cpp  clut.cpp  color_error.cpp  dead_pixel.cpp  flat_field.cpp  gamma.cpp  image_node.cpp  quick_color_calib.cpp  roi.cpp  scm.cpp  spectral.cpp  white_balance.cpp
src/logo/: app_icon.rc  convert_to_ico.py
src/ui/: color_char_calib_panel.cpp  color_error_panel.cpp  dead_pixel_panel.cpp  flat_field_panel.cpp  image_viewer.cpp  main_window.cpp  quick_color_calib_panel.cpp  roi_editor.cpp  spectral_calib_panel.cpp
src/utils/: image_io.cpp  logger.cpp  memory_pool.cpp  session_config.cpp  tone_mapping.cpp
src/wxui/: color_char_calib_panel.cpp  color_error_panel.cpp  dead_pixel_panel.cpp  flat_field_panel.cpp  image_canvas.cpp  main_app.cpp  main_frame.cpp  neumorphic_panel.cpp  neumorphic_panel.h  pipeline_panel.cpp  quick_color_calib_panel.cpp  scm_panel.cpp  spectral_calib_panel.cpp  style_defs.h  worker_thread.cpp
